--- a/platforms/ios/.gitignore
+++ b/platforms/ios/.gitignore
@@ -35,3 +35,6 @@ gtnn.framework/Headers/utils/dims_vector_utils.h
 gtnn.framework/Headers/utils/half_utils.h
 gtnn.framework/Headers/utils/image_converter.h
 gtnn.framework/Modules/module.modulemap
+
+tnn.bundle/
+tnn.framework/
